@@ -4,7 +4,7 @@ module NewRelic
     MAJOR = 2
     MINOR = 12
     TINY  = 1
-    BUILD = 'alpha' #'0' # Set to nil for a release, 'beta1', 'alpha', etc for prerelease builds
+    BUILD = nil #'0' # Set to nil for a release, 'beta1', 'alpha', etc for prerelease builds
     STRING = [MAJOR, MINOR, TINY, BUILD].compact.join('.')
   end
   
